fix: edit broken styles, change colors in card-levels

--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -1,3 +1,7 @@
 .d-flex {
   display: flex;
 }
+
+.cursor-def {
+  cursor: default;
+}
