--- a/src/assets/styles/_pagination.scss
+++ b/src/assets/styles/_pagination.scss
@@ -13,7 +13,7 @@
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1090px) {
   .pagination li a {
     font-size: 22px;
   }
