--- a/src/assets/styles/_textbook.scss
+++ b/src/assets/styles/_textbook.scss
@@ -30,12 +30,17 @@
       rgba(0, 0, 0, 0) 0%,
       rgba(0, 0, 0, 1) 100%
     );
+
+    .translation {
+      font-size: 20px;
+    }
   }
 
   &-content {
     flex-direction: column;
     max-height: 340px;
     padding: 20px 20px 20px 0;
+    font-size: 15px;
 
     > :first-child > :first-child {
       margin: 0;
@@ -64,6 +69,7 @@
   &-translation,
   &-phrase {
     margin: 5px 0;
+    color: $bg-color;
   }
 
   &-example {
@@ -71,7 +77,7 @@
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1090px) {
   .card {
     &,
     &-image img {
@@ -81,7 +87,7 @@
   }
 }
 
-@media (max-width: 1023px) {
+@media (max-width: 1089px) {
   .card {
 
     &-wrapper {
@@ -115,6 +121,7 @@
 
     &-content {
       padding: 0 15px 15px 15px;
+      font-size: 13px;
     }
 
     &-action .btn {
@@ -123,14 +130,11 @@
       font-size: 12px;
       line-height: 31px;
     }
-  }
 
-  .word,
-  .translation {
-    font-size: 18px;
-  }
-
-  .transcription {
-    font-size: 17px;
+    .word,
+    .transcription,
+    .translation {
+      font-size: 16px;
+    }
   }
 }
